--- a/style.css
+++ b/style.css
@@ -265,3 +265,21 @@ section h2 {
     font-size: 0.6rem;
     text-align: center;
 }
+
+@media screen and (max-width: 780px) {
+    nav ul {
+        flex-direction: column;
+        align-items: center;
+        gap: 0px;
+    }
+
+    .about-container, .skills-container {
+        flex-direction: column;
+        text-align: center;
+    }
+
+    .skills-list ul {
+        padding-left: 0;
+    }
+}
+
